# MiniProject8_KellyTong

./: .coverage  Cargo.toml  Makefile  README.md  main.py  requirements.txt  test_main.py
.github/workflows/: pyCI.yml
mylib/: lib.py
src/: lib.rs  main.rs
